src/objects/LID__Log__c.object
<CustomObject>
    <label>Log</label>
    <nameField>
        <displayFormat>L-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>LID__Body__c</fullName>
        <label>Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LID__Headers__c</fullName>
        <label>Headers</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LID__Status_Code__c</fullName>
        <label>Status Code</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LID__Status_Message__c</fullName>
        <label>Status Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>